Added .CSS file

--- a/Develop/views/single-post.handlebars
+++ b/Develop/views/single-post.handlebars
@@ -1,13 +1,13 @@
 <article class="blog-post">
-  <h2>{{title}}</h2>
-  <p class="meta">Posted by {{author}} on {{formattedDate date_created}}</p>
+  <h2>{{post.title}}</h2>
+  <p class="meta">Posted by {{post.author}} on {{formattedDate post.date_created}}</p>
   <div class="content">
-    {{{content}}}
+    {{{post.content}}}
   </div>
 
   <section class="comments">
     <h3>Comments</h3>
-    {{#each comments}}
+    {{#each post.comments}}
       <div class="comment">
         <p class="meta">Comment by {{commenter}} on {{formattedDate date_created}}</p>
         <p>{{text}}</p>
