--- a/Develop/views/homepage.handlebars
+++ b/Develop/views/homepage.handlebars
@@ -1,3 +1,6 @@
+{{! Include styles in the head of your HTML document }}
+<link rel="stylesheet" href="/style.css">
+
 {{#each posts}}
   <article class="blog-post">
     <h2>{{title}}</h2>
