--- a/Develop/views/single-post.handlebars
+++ b/Develop/views/single-post.handlebars
@@ -1,3 +1,6 @@
+{{! Include styles in the head of your HTML document }}
+<link rel="stylesheet" href="/style.css">
+
 <article class="blog-post">
   <h2>{{post.title}}</h2>
   <p class="meta">Posted by {{post.author}} on {{formattedDate post.date_created}}</p>
