--- a/Develop/public/style.css
+++ b/Develop/public/style.css
@@ -6,8 +6,8 @@ body {
 }
 
 header {
-  background-color: lightskyblue;
-  color: midnightblue;
+  background-color: #365486;
+  color: #DCF2F1;
   padding: 10px;
   text-align: right; /* Align text to the right */
   display: flex; /* Enable flex container properties */
@@ -16,7 +16,7 @@ header {
 
 /* Add this style rule to make the links black */
 header a {
-  color: midnightblue;
+  color: #DCF2F1;
 }
 
 main {
