Modified session.js and signup.handlebars

--- a/Develop/views/signup.handlebars
+++ b/Develop/views/signup.handlebars
@@ -73,8 +73,8 @@
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" required>
 
-            <label for="confirmPassword">Confirm Password:</label>
-            <input type="password" id="confirmPassword" name="confirmPassword" required>
+            {{!-- <label for="confirmPassword">Confirm Password:</label>
+            <input type="password" id="confirmPassword" name="confirmPassword" required> --}}
 
             <button type="submit">Sign Up</button>
         </form>
