--- a/Develop/views/signup.handlebars
+++ b/Develop/views/signup.handlebars
@@ -63,7 +63,7 @@
 
     <main>
         <form action="/signup" method="POST">
-            <!-- Add your signup form fields here -->
+            <!-- Add signup form fields here -->
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" required>
 
@@ -80,7 +80,7 @@
         </form>
     </main>
 
-    <!-- Add your footer or additional content here -->
+    <!-- Add footer or additional content here -->
 
 </body>
 
