Massive update to public folder and debugged

--- a/Develop/views/login.handlebars
+++ b/Develop/views/login.handlebars
@@ -14,10 +14,10 @@
     </header>
 
     <main>
-        <form action="/login" method="POST">
+        <form class = "login-form">
             <!-- Add your login form fields here -->
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required>
+            <label for="email">Email:</label>
+            <input type="text" id="email" name="email" required>
 
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" required>
@@ -27,6 +27,7 @@
     </main>
 
     <!-- Add footer or additional content here -->
+<script src="/login.js"></script>
 
 </body>
 
