--- a/Develop/views/signup.handlebars
+++ b/Develop/views/signup.handlebars
@@ -62,10 +62,10 @@
     </header>
 
     <main>
-        <form action="/signup" method="POST">
+        <form class = "signup-form"> 
             <!-- Add signup form fields here -->
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required>
+            <label for="name">Username:</label>
+            <input type="text" id="name" name="name" required>
 
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required>
@@ -81,6 +81,7 @@
     </main>
 
     <!-- Add footer or additional content here -->
+<script src="/signup.js"></script>
 
 </body>
 
