--- a/Develop/public/style.css
+++ b/Develop/public/style.css
@@ -19,6 +19,13 @@ header a {
   color: #DCF2F1;
 }
 
+footer {
+  color:#DCF2F1;
+  background-color: #365486;
+  padding-top: 1%;
+  padding-bottom: 1%;
+}
+
 main {
   max-width: 800px;
   margin: 20px auto;
