--- a/Develop/views/layouts/main.handlebars
+++ b/Develop/views/layouts/main.handlebars
@@ -31,7 +31,7 @@
     </main>
 
     <footer>
-        <p><center>&copy; 2024 KC Tech Blog</center></p>
+        <p><h3><center>&copy; 2024 KC Tech Blog</center></h3></p>
     </footer>
 </body>
 
